# PomodoroBoulot

./: .gitignore  API.md  BUILD.md  README.md  TODO.md  V1-FEATURES.md  docker-compose.yml
apps/backend/: .env.example  package-lock.json  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo
apps/backend/prisma/: schema.prisma  seed.js  seed.js.map  seed.ts
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  types.ts
apps/backend/src/pomodoro/: pomodoro.controller.ts  pomodoro.module.ts  pomodoro.service.ts
apps/backend/src/tasks/: tasks.controller.ts  tasks.module.ts  tasks.service.ts
apps/backend/src/tracking/: tracking.controller.ts  tracking.module.ts  tracking.service.ts
apps/backend/src/v1/: v1.module.ts
apps/desktop/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: api.ts  notifications.ts  utils.ts
apps/desktop/src/store/: authStore.ts  taskStore.ts  timerStore.ts  toastStore.ts
apps/desktop/src/types/: index.ts
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/hooks/: useGitHubRepo.ts  useInView.ts
apps/web/src/i18n/: translations.ts
apps/web/src/pages/: AppPage.tsx  LandingPage.tsx
(+31 files in other folders)
