[package]
name = "pomodoro-boulot"
version = "0.1.0"
description = "PomodoroBoulot - Pomodoro Timer for macOS"
authors = []
edition = "2021"

[lib]
name = "pomodoro_boulot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
